<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 android:id="@+id/widgetBody"
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:layout_marginLeft="@dimen/widget_margin"
 android:layout_marginRight="@dimen/widget_margin"
 android:background="#a0ffffff"
 android:gravity="center"
 android:orientation="vertical"
 android:paddingLeft="@dimen/widget_padding"
 android:paddingRight="@dimen/widget_padding">

 <TextView
  style="@style/IcaWidgetStyle"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:text="@string/ica_title" />

 <TextView
  style="@style/IcaWidgetNormalStyle"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:text="@string/ica_last_conf_date" />

 <TextView
  android:id="@+id/confDate"
  style="@style/IcaWidgetNormalStyle"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:gravity="right" />

 <TextView
  style="@style/IcaWidgetNormalStyle"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:text="@string/ica_rest" />

 <TextView
  android:id="@+id/widetRest"
  style="@style/IcaWidgetNormalStyle"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:gravity="right" />

</LinearLayout>
