<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical">

 <android.support.v7.widget.Toolbar
  android:id="@+id/tool_bar"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="?attr/colorPrimary"
  android:minHeight="?attr/actionBarSize">
 </android.support.v7.widget.Toolbar>

 <LinearLayout
  android:id="@+id/firstStepLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="horizontal"
  android:paddingBottom="@dimen/activity_vertical_margin_half"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin_half">

  <TextView
   android:id="@+id/messageText"
   style="@style/IcaRestStyle"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:text="@string/ica_first_step" />

  <TextView
   android:id="@+id/nowRestMoneyText"
   style="@style/IcaRestStyle"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:gravity="end" />
 </LinearLayout>

 <LinearLayout
  style="@style/IcaHistoryStyle"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:paddingBottom="@dimen/activity_vertical_margin_half"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin_half"
  android:textAppearance="?android:attr/textAppearanceLarge">

  <TextView
   style="@style/IcaHistoryStyle"
   android:layout_width="0dp"
   android:layout_height="wrap_content"
   android:layout_weight="1"
   android:gravity="start"
   android:text="@string/ica_use_date"
   android:textAppearance="?android:attr/textAppearanceMedium" />

  <LinearLayout
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:gravity="end"
   android:orientation="horizontal">

   <TextView
    style="@style/IcaHistoryStyle"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:text="@string/ica_add"
    android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
    style="@style/IcaHistoryStyle"
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:text="@string/ica_use"
    android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
    style="@style/IcaHistoryStyle"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:text="@string/ica_rest"
    android:textAppearance="?android:attr/textAppearanceMedium" />
  </LinearLayout>
 </LinearLayout>

 <ListView
  android:id="@+id/listView"
  android:layout_width="match_parent"
  android:layout_height="wrap_content" />

</LinearLayout>
